# bzlmod

./: .gitignore  BUILD.bazel  MODULE.bazel  Makefile  README.md  buf.gen.yaml  buf.yaml  go.mod  go.sum
cmd/client/: BUILD.bazel  main.go
cmd/server/: BUILD.bazel  main.go
internal/: README.md
proto/abitofhelp/helloworld/v1/: BUILD.bazel  helloworld.proto
