load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("@buildifier_prebuilt//:rules.bzl", "buildifier")

exports_files(
    ["buf.yaml"],
    visibility = ["//visibility:public"],
)

gazelle_binary(
    name = "gazelle-buf",
    languages = [
        # Loads the native proto extension
        "@bazel_gazelle//language/proto:go_default_library",
        # Loads the Buf extension
        "@rules_buf//gazelle/buf:buf",
        # NOTE: This needs to be loaded after the proto language
    ],
)

# gazelle:exclude bazel-*
# gazelle:exclude internal/gen
# gazelle:exclude scripts
# gazelle:go_proto_compiler @rules_go//proto:go_proto  # want protoc-gen-go
# gazelle:go_grpc_compilers @com_connectrpc_connect//cmd/protoc-gen-connect-go:protoc-gen-connect-go ##, @rules_go_grpc//proto:gen-go-grpc
gazelle(
    name = "gazelle",
    gazelle = ":gazelle-buf",
)

# Provide for import of libraries either using the
# import or go_default_library naming conventions.
## gazelle:go_naming_convention import_alias

buildifier(
    name = "buildifier.check",
    exclude_patterns = [
        "./bazel-*",
        "./git/*",
        "./vendor/*",
    ],
    lint_mode = "warn",
    lint_warnings = ["all"],
    mode = "check",
    verbose = True,
)

#proto_library(
#    name = "root_proto",
#    srcs = [
#        "hello_world.proto",
#    ],
#    visibility = ["//visibility:public"],
#    deps = ["@buf_deps//validate:validate_proto"],
#)
#
#buf_lint_test(
#    name = "root_proto_lint",
#    config = "//:buf.yaml",
#    targets = [":root_proto"],
#)
