load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("@buildifier_prebuilt//:rules.bzl", "buildifier")

exports_files(
    ["buf.yaml"],
    visibility = ["//visibility:public"],
)

gazelle_binary(
    name = "gazelle-buf",
    languages = [
        # Loads the native proto extension
        "@bazel_gazelle//language/proto:go_default_library",
        # Loads the Buf extension
        "@rules_buf//gazelle/buf:buf",
        # NOTE: This needs to be loaded after the proto language
    ],
)

gazelle(
    name = "gazelle",
    gazelle = ":gazelle-buf",
)

# gazelle:exclude bazel-*
# gazelle:exclude internal/gen
# gazelle:exclude scripts
# gazelle:go_grpc_compilers @com_connectrpc_connect//cmd/protoc-gen-connect-go:protoc-gen-connect-go ##, @rules_go_grpc//proto:go_grpc_v2
# gazelle:go_naming_convention import_alias
# gazelle:go_proto_compilers @rules_go//proto:go_proto  ## Uses protoc-gen-go from the plugin: "@org_golang_google_protobuf//cmd/protoc-gen-go"

buildifier(
    name = "buildifier.check",
    exclude_patterns = [
        "./bazel-*",
        "./git/*",
        "./vendor/*",
    ],
    lint_mode = "warn",
    lint_warnings = ["all"],
    mode = "check",
    verbose = True,
)
